--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "recharts": "^2.15.3",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.3.0",
+    "use-debounce": "^10.0.5",
     "zod": "^3.24.4"
   },
   "devDependencies": {
